# qrust

./: .gitignore  Cargo.toml  README.md  diagram.json  rust-toolchain.toml  wokwi.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
docs/: README.md
src/: controller.rs  main.rs
