[package]
name = "qrust"
version = "0.1.0"
authors = ["Elliot Nash <elliotnash@gmail.com>"]
edition = "2021"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[patch.crates-io]
tokio = { git = "https://github.com/tokio-rs/tokio", branch = "master" }
mio = { git = "https://github.com/tokio-rs/mio", branch = "master" }
socket2 = { git = "https://github.com/rust-lang/socket2", branch = "master" }
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys.git", branch = "master" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git", branch = "master" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git", branch = "master" }
embedded-svc = { git = "https://github.com/esp-rs/embedded-svc.git", branch = "master" }

[dependencies]
# ESP board crates
esp-idf-sys = { version = "0.33", features = ["binstart"] }
esp-idf-svc = { version = "0.47", features = ["experimental", "embassy-time-driver", "embassy-time-queue-driver"] }
esp-idf-hal = "0.42"

embedded-svc = { version = "0.26", features = ["experimental"] }
embedded-hal_2 = { version = "0.2", package = "embedded-hal" }
embedded-hal = { version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["std", "async"]}
embedded-io-async = "0.6"

# Async
tokio = { version = "*", features = ["rt", "net", "io-util", "time", "sync", "macros"] }
mio = { version = "1.0.0", features = ["log"] }
embassy-time = "0.3"

# Drivers
shared-bus = { version = "0.3", features = ["std"] }
mpu9250 = { version = "0.25.0", features = ["i2c"] }
bme280 = { git = "https://github.com/fry/bme280-rs.git" }

# Crossfire
crsf = { path = "/Users/elliot/Code/Rust/crsf-rs" }

# Misc
nalgebra = "0.32"
log = { version = "0.4" }
anyhow = "1"

[build-dependencies]
embuild = "0.31.0"
anyhow = "1"
